@@ -11,7 +11,8 @@
       },
       {
         "img": "images/open_door.png",
-        "codes": "type_door,open_door"
+        "codes": "type_door,open_door",
+				"inherit_codes": false
       }
     ]
   },
@@ -27,7 +28,36 @@
       },
       {
         "img": "images/open_forest.png",
-        "codes": "type_forest,open_forest"
+        "codes": "type_forest,open_forest",
+				"inherit_codes": false
+      }
+    ]
+  },
+  {
+    "name": "Bridge Requirement",
+    "type": "progressive",
+    "allow_disabled":false,
+    "loop": true,
+    "stages": [
+      {
+        "img": "images/bridge_medallions.png",
+        "codes": "type_bridge,bridge_medallions",
+				"inherit_codes": false
+      },
+      {
+        "img": "images/bridge_vanilla.png",
+        "codes": "type_bridge,bridge_vanilla",
+				"inherit_codes": false
+      },
+      {
+        "img": "images/bridge_dungeons.png",
+        "codes": "type_bridge,bridge_dungeons",
+				"inherit_codes": false
+      },
+      {
+        "img": "images/bridge_open.png",
+        "codes": "type_bridge,bridge_open",
+				"inherit_codes": false
       }
     ]
   },
@@ -710,17 +740,16 @@
   },
   {
     "name": "Bottles",
-    "type": "progressive",
-    "stages": [
-      {
-        "img": "images/bottle.png",
-        "codes": "bottle"
-      },
-      {
-        "img": "images/bottle-letter.png",
-        "codes": "ruto"
-      }
-    ]
+    "type": "consumable",
+    "max_quantity": 4,
+    "img": "images/bottle.png",
+    "codes": "bottle"
+  },
+  {
+    "name": "Rutos Letter",
+    "type": "toggle",
+    "img": "images/bottle-letter.png",
+    "codes": "ruto"
   },
   {
     "name": "Gauntlets",
@@ -802,8 +831,9 @@
   },
   {
     "name": "Free Prize",
-    "type": "progressive_toggle",
+    "type": "progressive",
     "loop": true,
+    "allow_disabled":false,
     "stages": [
       {
         "img": "images/unknown-small.png",
@@ -811,39 +841,48 @@
       },
       {
         "img": "images/emerald.png",
-        "codes": "free,emerald"
+        "codes": "free,emerald",
+				"inherit_codes": false
       },
       {
         "img": "images/ruby.png",
-        "codes": "free,ruby"
+        "codes": "free,ruby",
+				"inherit_codes": false
       },
       {
         "img": "images/sapphire.png",
-        "codes": "free,sapphire"
+        "codes": "free,sapphire",
+				"inherit_codes": false
       },
       {
         "img": "images/forestmedallion.png",
-        "codes": "free,forestmed"
+        "codes": "free,forestmed",
+				"inherit_codes": false
       },
       {
         "img": "images/firemedallion.png",
-        "codes": "free,firemed"
+        "codes": "free,firemed",
+				"inherit_codes": false
       },
       {
         "img": "images/watermedallion.png",
-        "codes": "free,watermed"
+        "codes": "free,watermed",
+				"inherit_codes": false
       },
       {
         "img": "images/spiritmedallion.png",
-        "codes": "free,spiritmed"
+        "codes": "free,spiritmed",
+				"inherit_codes": false
       },
       {
         "img": "images/shadowmedallion.png",
-        "codes": "free,shadowmed"
+        "codes": "free,shadowmed",
+				"inherit_codes": false
       },
       {
         "img": "images/lightmedallion.png",
-        "codes": "free,lightmed"
+        "codes": "free,lightmed",
+				"inherit_codes": false
       }
     ]
   },
@@ -866,6 +905,7 @@
     "name": "Deku Prize",
     "type": "progressive_toggle",
     "loop": true,
+    "swap_actions":true,
     "stages": [
       {
         "img": "images/unknown-small.png",
@@ -928,6 +968,7 @@
     "name": "Dodongo Prize",
     "type": "progressive_toggle",
     "loop": true,
+    "swap_actions":true,
     "stages": [
       {
         "img": "images/unknown-small.png",
@@ -990,6 +1031,7 @@
     "name": "Jabu Prize",
     "type": "progressive_toggle",
     "loop": true,
+    "swap_actions":true,
     "stages": [
       {
         "img": "images/unknown-small.png",
@@ -1059,6 +1101,7 @@
     "name": "Forest Prize",
     "type": "progressive_toggle",
     "loop": true,
+    "swap_actions":true,
     "stages": [
       {
         "img": "images/unknown-small.png",
@@ -1128,6 +1171,7 @@
     "name": "Fire Prize",
     "type": "progressive_toggle",
     "loop": true,
+    "swap_actions":true,
     "stages": [
       {
         "img": "images/unknown-small.png",
@@ -1197,6 +1241,7 @@
     "name": "Water Prize",
     "type": "progressive_toggle",
     "loop": true,
+    "swap_actions":true,
     "stages": [
       {
         "img": "images/unknown-small.png",
@@ -1266,6 +1311,7 @@
     "name": "Spirit Prize",
     "type": "progressive_toggle",
     "loop": true,
+    "swap_actions":true,
     "stages": [
       {
         "img": "images/unknown-small.png",
@@ -1335,6 +1381,7 @@
     "name": "Shadow Prize",
     "type": "progressive_toggle",
     "loop": true,
+    "swap_actions":true,
     "stages": [
       {
         "img": "images/unknown-small.png",
