@@ -38,28 +38,28 @@
           "hammer",
           "lightarrow",
           "nayruslove",
-          "greentunic",
+          "lift1",
           "redtunic",
           "bluetunic"
         ],
         [
-          "deku",
-          "dodongo",
-          "jabu",
+          "gerudocard",
+          "agony",
+          "ruto",
           "bottle",
           "adulttrade",
           "kidtrade",
-          "kokiriboots",
+          "scale1",
           "ironboots",
           "hoverboots"
         ],
         [
-          "forest",
-          "fire",
-          "water",
-          "spirit",
-          "shadow",
-          "free",
+          "lullaby",
+          "epona",
+          "saria",
+          "sun",
+          "time",
+          "storm",
           "wallet1",
           "magic",
           "skulltula"
@@ -71,20 +71,20 @@
           "requiem",
           "nocturne",
           "prelude",
-          "lift1",
-          "gerudocard",
-          "agony"
-        ],
-        [
-          "lullaby",
-          "epona",
-          "saria",
-          "sun",
-          "time",
-          "storm",
-          "scale1",
+          "type_bridge",
           "open_forest",
           "open_door"
+        ],
+        [
+          "forest",
+          "fire",
+          "water",
+          "spirit",
+          "shadow",
+          "free",
+          "deku",
+          "dodongo",
+          "jabu"
         ]
       ]
     },
