@@ -1,6 +1,8 @@
 1.0.0.4:
   -added small key counters
   -started adding open/closed forest/door logic
+  -added rainbow bridge requirements and a toggle for it
+  -changed the default layout of the tracker to incorporate new icons
 1.0.0.3:
   -fixed Zoras Domain/Fountain logic interaction between child and adult
   -fixed Zoras Fountain Fairy can't be opened with hammer
